# horizonX

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: LONG_HORIZON_AGENT.md
examples/: master_template.yaml  python_api.py
examples/api_design/: task.yaml
examples/autoresearch/: README.md  task.yaml
examples/autotrain/: README.md  task.yaml
examples/coding/: README.md  task.yaml
examples/data_analysis/: README.md  task.yaml
examples/kernel_optimization/: README.md  task.yaml
examples/security_audit/: task.yaml
examples/self_critique/: task.yaml
horizonx/: __init__.py  cli.py
horizonx/agents/: __init__.py  base.py  claude_code.py  codex.py  custom.py  mock.py  openhands.py  repair.py
horizonx/core/: __init__.py  event_bus.py  goal_graph.py  governor.py  llm_client.py  recorder.py  runtime.py  session_manager.py  spin_detector.py  summarizer.py  types.py
horizonx/environments/: __init__.py  local.py
horizonx/hitl/: __init__.py  gate.py
horizonx/runtime/: watchdog.py
horizonx/storage/: __init__.py  sqlite.py
horizonx/strategies/: __init__.py  base.py  decomposition.py  monitor.py  pair.py  ralph.py  self_critique.py  sequential.py  single.py  tree.py
horizonx/validators/: __init__.py  base.py  git.py  goal_graph.py  llm_judge.py  metric.py  registry.py  shell.py  test_suite.py
tests/: conftest.py  test_agent_drivers.py  test_agent_repair.py  test_custom_agent.py  test_decomposition_strategy.py  test_examples_e2e.py  test_git_validator.py  test_goal_graph.py  test_goal_graph_validator.py  test_governor.py  test_llm_judge.py  test_mock_agent.py  test_monitor_strategy.py  test_pair_strategy.py  test_runtime_integration.py  test_self_critique_strategy.py  test_spin_detector.py  test_sqlite_store.py  test_summarizer.py  test_test_suite_validator.py  test_tree_strategy.py  test_validator_registry.py  test_watchdog.py
